--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
   "author": "Johannes Siipola",
   "license": "Unlicense",
   "dependencies": {
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.8",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "react": "^15.4.0",
     "react-dom": "^15.4.0",
-    "babel-core": "^6.18.2",
-    "babel-loader": "^6.2.8",
+    "react-router": "^3.0.0",
     "webpack": "^1.13.3"
-  },
+  }
 }
