--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,4 @@
 {
-  "presets": ["babel-preset-react", "babel-preset-es2015"]
+  "presets": ["babel-preset-react", "babel-preset-es2015", "stage-0"],
+  "plugins": ["transform-decorators-legacy"]
 }
