--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
   "author": "Johannes Siipola",
   "license": "Unlicense",
   "dependencies": {
+    "axios": "^0.15.2",
     "babel-core": "^6.18.2",
     "babel-loader": "^6.2.8",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "react": "^15.4.0",
     "react-dom": "^15.4.0",
+    "react-redux": "^4.4.6",
     "react-router": "^3.0.0",
+    "redux": "^3.6.0",
+    "redux-connect": "^4.0.2",
     "webpack": "^1.13.3"
   }
 }
