--- a/package.json
+++ b/package.json
@@ -4,18 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "babel index.js -d build --presets es2015,stage-0"
   },
   "author": "Johannes Siipola",
   "license": "Unlicense",
   "dependencies": {
     "axios": "^0.15.2",
+    "babel-cli": "^6.18.0",
     "babel-core": "^6.18.2",
     "babel-loader": "^6.2.8",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
+    "gulp-babel": "^6.1.2",
+    "nunjucks": "^3.0.0",
     "react": "^15.4.0",
     "react-dom": "^15.4.0",
     "react-helmet": "^3.2.2",
@@ -23,6 +27,7 @@
     "react-router": "^3.0.0",
     "redux": "^3.6.0",
     "redux-connect": "^4.0.2",
+    "serialize-javascript": "^1.3.0",
     "webpack": "^1.13.3"
   },
   "devDependencies": {
