--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "babel index.js -d build --presets es2015,stage-0"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Johannes Siipola",
   "license": "Unlicense",
@@ -19,6 +18,7 @@
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
     "gulp-babel": "^6.1.2",
+    "gulp-webpack": "^1.5.0",
     "nunjucks": "^3.0.0",
     "react": "^15.4.0",
     "react-dom": "^15.4.0",
@@ -36,6 +36,7 @@
     "eslint-config-airbnb": "^13.0.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
-    "eslint-plugin-react": "^6.7.1"
+    "eslint-plugin-react": "^6.7.1",
+    "gulp-nodemon": "^2.2.1"
   }
 }
