--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
+    "express": "^4.14.0",
     "gulp-babel": "^6.1.2",
     "gulp-webpack": "^1.5.0",
     "nunjucks": "^3.0.0",
