--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
     "express": "^4.14.0",
+    "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-webpack": "^1.5.0",
     "nunjucks": "^3.0.0",
