--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "babel-preset-stage-0": "^6.16.0",
     "express": "^4.14.0",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.1",
     "gulp-babel": "^6.1.2",
+    "gulp-sass": "^2.3.2",
     "gulp-webpack": "^1.5.0",
+    "normalize.css": "^5.0.0",
     "nunjucks": "^3.0.0",
     "react": "^15.4.0",
     "react-dom": "^15.4.0",
