--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-babel": "^6.1.2",
     "gulp-sass": "^2.3.2",
     "gulp-webpack": "^1.5.0",
+    "normalize-url": "^1.8.0",
     "normalize.css": "^5.0.0",
     "nunjucks": "^3.0.0",
     "react": "^15.4.0",
